# toony-mcp

./: .env.example  CLAUDE.md  README.md  install.sh  pyproject.toml  uninstall.sh  update.sh
src/toony_mcp/: __main__.py  client.py  server.py
src/toony_mcp/tools/: issues.py  projects.py  workflows.py  workspace.py
